boot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boot
  labels:
    app: boot
spec: # specification
  replicas: 2
  selector:
    matchLabels:
      app: boot
  template:
    metadata:
      labels:
        app: boot
    spec:
      containers:
      - name: boot
        image: jinpyo0311/sample-boot # either from docker registries or other
        ports:
        - containerPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: boot-service
spec:
  selector:
    app: boot
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30002
